fixing some bugs on mobile viewport

--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,12 @@ html, body {
   }
 }
 @media (max-width: 770px) {
+  .header .phone h1 {
+    margin-left: 1rem;
+  }
+  .header .phone__nav {
+    margin-right: 1rem;
+  }
   .header__heading {
     width: 80%;
     margin: 16rem auto;
@@ -330,6 +336,7 @@ html, body {
   }
   .offers__heading h3 {
     font-size: 1.3rem;
+    text-align: center;
   }
   .offers__heading p {
     width: 75%;
@@ -756,6 +763,10 @@ html, body {
 @media (max-width: 530px) {
   .contact__flex {
     width: 95%;
+  }
+
+  input[type=text] {
+    max-width: 100%;
   }
 }
 .footer {
