--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -150,6 +150,10 @@
     .contact__flex {
         width: 95%;
     }
+    
+    input[type="text"] {
+        max-width: 100%;    
+    }
 }
 
 
