--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -157,6 +157,16 @@
 @media( max-width: 770px ) {
     .header {
         
+        .phone {
+            h1 {
+                margin-left: 1rem;
+            }
+            
+            &__nav {
+                margin-right: 1rem;
+            }
+        }
+        
         &__heading {
             width: 80%;
             margin: 16rem auto;
