--- a/sass/layout/_offers.scss
+++ b/sass/layout/_offers.scss
@@ -132,7 +132,7 @@
         &__nav {
             padding-bottom: 3rem;
         }
-  }
+   }
 }
 
 @media( max-width: 700px ) {
@@ -145,6 +145,7 @@
             
             h3 {
                 font-size: 1.3rem;
+                text-align: center;
             }
             
             p {
